[gd_scene load_steps=5 format=3 uid="uid://d366vc17ipsry"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_c81kq"]
[ext_resource type="Texture2D" uid="uid://cns4oiqcm2bex" path="res://assets/art/menus/HOME.png" id="1_qjrbq"]
[ext_resource type="FontFile" uid="uid://cskxkyeot0b0l" path="res://assets/fonts/Luckiest Guy/LuckiestGuy-Regular.ttf" id="2_pgjn0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1sorw"]
bg_color = Color(0.101961, 0.101961, 0.101961, 0.960784)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c81kq")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qjrbq")
expand_mode = 1
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -425.0
offset_top = -77.0
offset_right = 425.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_pgjn0")
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_pgjn0")
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_pgjn0")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="ControlsWindow" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="ControlsWindow"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1sorw")

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsWindow/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="ControlsWindow/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pgjn0")
theme_override_font_sizes/font_size = 80
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Movement" type="Label" parent="ControlsWindow/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pgjn0")
theme_override_font_sizes/font_size = 40
text = "[Arrow Keys] Move"
horizontal_alignment = 1

[node name="Interact" type="Label" parent="ControlsWindow/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pgjn0")
theme_override_font_sizes/font_size = 40
text = "[Space] Interact"
horizontal_alignment = 1

[node name="Open Menu" type="Label" parent="ControlsWindow/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pgjn0")
theme_override_font_sizes/font_size = 40
text = "[ESC] Pause/Open Menu
"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="ControlsWindow/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_pgjn0")
theme_override_font_sizes/font_size = 40
text = "Back"

[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ControlsWindow/PanelContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
